Fixed stretched portrait image

--- a/1/style.css
+++ b/1/style.css
@@ -68,7 +68,7 @@ h1 {
     margin-top: -5%;
     margin-bottom: -5%;
     width: 40%;
-    height: 40%;
+    /*height: 40%;*/
 }
 
 .container {
@@ -359,6 +359,6 @@ a.img-link:hover,a.img-link:active {
         margin-top: 5%;
         margin-bottom: -5%;
         width: 100%;
-        height: 100%;
+        /*height: 100%;*/
     }
   }
